--- a/03_files.ipynb
+++ b/03_files.ipynb
@@ -591,7 +591,7 @@
     "Fear not! This happens sometimes when the .entities file is corrupted with something like a \" mark. You simply need to go into the file and remove the character that is causing the error. Use the row number as an indicator of where to go in the text file. Remember, add one row because row 1 is the header data.\n",
     "\n",
     "Before:\n",
-    "```{image} ./images/booknlp_error.PNG\n",
+    "```{image} ./images/booknlp_solution.PNG\n",
     ":alt: jupyter_org\n",
     ":class: bg-primary\n",
     ":width: 500px\n",
@@ -600,6 +600,12 @@
     "![images/booknlp_solution.PNG](attachment:6089ea0b-cf6a-4e1b-bb38-09358eaff2c7.PNG)\n",
     "\n",
     "After:\n",
+    "```{image} ./images/booknlp_solution2.PNG\n",
+    ":alt: jupyter_org\n",
+    ":class: bg-primary\n",
+    ":width: 500px\n",
+    ":align: center\n",
+    "```\n",
     "![images/booknlp_solution2.PNG](attachment:f87e4329-e6a4-4276-a453-7764ed688733.PNG)"
    ]
   },
