deploy: 0ce7a9476d1c1940c4e912e353b0904803dfa0d0

--- a/_sources/01_intro.ipynb
+++ b/_sources/01_intro.ipynb
@@ -155,7 +155,7 @@
    "id": "disciplinary-match",
    "metadata": {},
    "source": [
-    "If you are using Linux (and I believe Mac), installation will be easy. Use pip install booknlp. You can opt to create a custom environment (recommended but not necessary). If you are using Windows, however, as of March 3 2022, you will need to do a few additional steps which I have documented in this video below:"
+    "If you are using Linux (and I believe Mac - for Mac M1, see below), installation will be easy. Use pip install booknlp. You can opt to create a custom environment (recommended but not necessary). If you are using Windows, however, as of March 3 2022, you will need to do a few additional steps which I have documented in this video below:"
    ]
   },
   {
@@ -200,30 +200,43 @@
     "\n",
     "When running on M1, you may run into a “zsh: illegal hardware instruction” when trying to run spacy or booknlp commands after pip installing booknlp, or you may run into some dependency errors when trying to pip install booknlp. This is my workaround for that, where we download the dependencies (spacy, tensorflow, pytorch, and transformers) stated in the setup.py manually and then running pip install booknlp without its dependencies.\n",
     "\n",
-    "- First start with a conda install, we will follow this guide to use miniforge.\n",
+    "- First, if you do not already have an Anaconda or miniconda for your local Python development, start with a conda install, we will follow this guide to use miniforge.\n",
     "    - https://www.mrdbourke.com/setup-apple-m1-pro-and-m1-max-for-machine-learning-and-data-science/\n",
     "        - Instant Download Link for Miniforge3 (Conda installer) for macOS arm64 chips (M1, M1 Pro, M1 Max).\n",
-    "        - chmod +x ~/Downloads/Miniforge3-MacOSX-arm64.sh\n",
-    "        - sh ~/Downloads/Miniforge3-MacOSX-arm64.sh\n",
-    "        - source ~/miniforge3/bin/activate\n",
-    "    - Now create a conda environment\n",
-    "        - conda create booknlp python=3.8\n",
-    "        - conda activate booknlp\n",
-    "    - Installing tensorflow\n",
-    "        - conda install -c apple tensorflow-deps\n",
-    "        - python -m pip install tensorflow-macos\n",
-    "        - python -m pip install tensorflow-metal\n",
-    "- Installing spacy\n",
-    "    - conda install -c conda-forge spacy\n",
-    "- Installing transformers\n",
-    "    - pip install transformers\n",
-    "- Installing pytorch\n",
-    "    - conda install -c pytorch pytorch\n",
-    "- Now if we run pip install booknlp we may get a conflicting dependency error or ResolutionImpossible error between booknlp and tensorflow. Because we have installed the dependencies ourselves, we can run the pip install without the dependencies\n",
-    "    - pip install –no-dependencies booknlp\n",
+    "        - `chmod +x ~/Downloads/Miniforge3-MacOSX-arm64.sh`\n",
+    "        - `sh ~/Downloads/Miniforge3-MacOSX-arm64.sh`\n",
+    "        - `source ~/miniforge3/bin/activate`\n",
+    "- With your existing or newly installed conda environment installed, continue in your Terminal or Anaconda Prompt session.\n",
+    "    - To ensure the conda environment you will create uses the MacOS native `osx-arm64` version of Python packages for your M1 Apple Silicon computer, execute this command in your Terminal or Anaconda Prompt session before following the rest of this recipe.\n",
+    "        - `conda env config vars set CONDA_SUBDIR=osx-arm64`\n",
+    "    - Now create and activate a new conda virtual environment that you will use for the BookNLP course:\n",
+    "        - `conda create -n booknlp python=3.8`\n",
+    "        - `conda activate booknlp`\n",
+    "- Installing tensorflow.\n",
+    "    - `conda install -c apple tensorflow-deps`\n",
+    "    - `python -m pip install tensorflow-macos`\n",
+    "    - `python -m pip install tensorflow-metal`\n",
+    "- Installing spacy.\n",
+    "    - `conda install -c conda-forge spacy`\n",
+    "- Installing transformers.\n",
+    "    - `conda install transformers` OR\n",
+    "    - `pip install transformers`\n",
+    "- Installing pytorch.\n",
+    "    - `conda install -c pytorch pytorch` OR, if this gives you installation troubles, try\n",
+    "    - `conda install -c conda-forge pytorch`\n",
+    "- Now if we were to run `pip install booknlp` we would very likely get a conflicting dependency error or ResolutionImpossible error between booknlp and tensorflow. Fortunately, because we have installed the dependencies ourselves, we can run the pip install _without_ including the already installed dependencies.\n",
+    "    - `pip install --no-dependencies booknlp` (Note the option parameter starts with two-dash characters.)\n",
     "- Now we can download the spacy pipeline and should be able to follow the rest of the booknlp repo.\n",
-    "    - python -m spacy download en_core_web_sm"
+    "    - `python -m spacy download en_core_web_sm`\n",
+    "\n",
+    "Congratulations! Your M1-based Macintosh should now be ready to use as you take the BookNLP course."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c90f3416",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
