--- a/05_events.ipynb
+++ b/05_events.ipynb
@@ -1244,7 +1244,7 @@
    ],
    "source": [
     "sentence1 = sentences[0]\n",
-    "result = df[df[\"sentence_ID\"] == int(sentence)]\n",
+    "result = df[df[\"sentence_ID\"] == int(sentence1)]\n",
     "result"
    ]
   },
